// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accessibility should expose correct accessibility tree if description is set 1`] = `
{
  "autocomplete": "list",
  "description": "Some description",
  "haspopup": "listbox",
  "name": "Option A, Some label",
  "role": "combobox",
}
`;

exports[`accessibility should expose correct accessibility tree in error state 1`] = `
{
  "autocomplete": "list",
  "haspopup": "listbox",
  "name": "Option A, Some label. Some error message",
  "role": "combobox",
}
`;

exports[`accessibility should expose correct accessibility tree of option list if filter value has no match 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "role": "none",
            },
          ],
          "role": "none",
        },
        {
          "children": [
            {
              "name": "No results found",
              "role": "StaticText",
            },
          ],
          "role": "none",
        },
      ],
      "name": "",
      "role": "status",
    },
  ],
  "name": "Some label",
  "orientation": "vertical",
  "role": "listbox",
}
`;

exports[`accessibility should expose correct initial accessibility tree and aria properties of filter 1`] = `
{
  "autocomplete": "list",
  "children": [
    {
      "role": "none",
    },
    {
      "name": "",
      "role": "generic",
    },
  ],
  "haspopup": "listbox",
  "name": "Option A, Some label",
  "role": "combobox",
}
`;
